--- a/gui.ui
+++ b/gui.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Calculator</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>images/icon.xpm</normaloff>images/icon.xpm</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
