--- a/help/index.page
+++ b/help/index.page
@@ -1,7 +1,7 @@
-<page xmlns="http://projectmallard.org/1.0/"
-    type="guide" id="index">
+<page xmlns="http://projectmallard.org/1.0/" type="guide" id="index">
     <title>C1000 Intelligent Calculator - Help</title>
     <p>Welcome to the C1000 Intelligent Calculator. The C1000 provides all of
     the functionality of a normal calculator plus many nice extras and advanced
     features to make your life easier and help you master advanced mathematics.</p>
 </page>
+
