--- a/help/basics.page
+++ b/help/basics.page
@@ -6,65 +6,66 @@
     and press the enter key to get the result.</p>
     <p>We can start with simple arithmetic:</p>
 <code>
->>> 1 + 2
+1 + 2
 = 3
->>> 4 - 2
+4 - 2
 = 2
->>> 4*2
+4*2
 = 27/2
->>> 1/3 + 1/2
+1/3 + 1/2
 = 5/6
->>> (2 + 3) * 4
+(2 + 3) * 4
 = 20
 </code>
     <p>As you can see, fractions are treated correctly so results will be given in
 exact form where possible.</p>
-
-    <p>We can also use powers with the '^' symbol (x^(1/2) = √x):</p>
+    <p>We can also use powers with the <code>^</code> symbol (<code>x^(1/2) = √x</code>):</p>
 <code>
->>> 5^2
+5^2
 = 25
->>> 5^3
+5^3
 = 125
->>> 25^(1/2)
+25^(1/2)
 = 5
->>> 5^(1/2)
+5^(1/2)
 = 5^(1/2)
 </code>
     <p>You will notice that the last result was given in exact form; to get it
-    as a decimal you can either use 'setexact()' to switch between using exact
-    form and decimals or the decimal function to convert a single result:</p>
+    as a decimal you can either use <code>setexact()</code> to switch between
+    using exact form and decimals or the decimal function to convert a single
+    result:</p>
 <code>
->>> 5^(1/2)
+5^(1/2)
 = 5^(1/2)
->>> decimal (5^(1/2))
+decimal (5^(1/2))
 = 2.24
->>> setexact()
+setexact()
 = 2.24
->>> 7^(1/3)
+7^(1/3)
 = 1.91
 </code>
     <p>Note that decimal values are given to 3 significant figures by default
     (as most exam-boards require), but you can set how many are displayed with
     the <code>setprec</code> function.</p>
 <code>
->>> 5^(1/2)
+5^(1/2)
 = 2.24
->>> setprec 10
+setprec 10
 = 2.236067977
 </code>
     <p>To store answers for future use, the calculator provides upto 26 variables
     named A to Z (they must be capitalised), as well as the ans variable which
-    stores the result of the previous calculation. You may use := to change a 
-    variable and refer to it at any time by name:</p>
+    stores the result of the previous calculation. You may use <code>:=</code>
+    to change a variable and refer to it at any time by name:</p>
 <code>
->>> 1/2
+1/2
 = 1/2
->>> ans - 1/3
+ans - 1/3
 = 1/6
->>> A := 5
+A := 5
 = 5
->>> A^2 - A
+A^2 - A
 = 20
 </code>
 </page>
+
