--- a/help/matrices.page
+++ b/help/matrices.page
@@ -2,57 +2,58 @@
     type="guide" id="matrices">
     <info><link type="guide" xref="index"/></info>
     <title>Matrices (FP1,FP2)</title>
-<p>The calculator allows your to directly enter matrices:</p>
+<p>The calculator allows us to directly enter matrices:</p>
 <code>
->>> [[1,2],[3,4]]
+[[1,2],[3,4]]
 = [[1, 2], [3, 4]]
->>> [[1,2],[3,4],[5,6]]
+[[1,2],[3,4],[5,6]]
 = [[1, 2], [3, 4], [5, 6]]
 </code>
-<p>You can also create an n by n identity matrix:</p>
+<p>We can also create an n by n identity matrix:</p>
 <code>
->>> identity 3
+identity 3
 = [[1, 0, 0], [0, 1, 0], [0, 0, 1]]
 </code>
 
 <p>Matrices may be added:</p>
 <code>
->>> [[2,3],[5,1]] + [[4,5],[2,1]]
+[[2,3],[5,1]] + [[4,5],[2,1]]
 = [[6, 8], [7, 2]]
 </code>
 <p>subtracted:</p>
 <code>
->>> [[2,3],[5,1]] - [[4,5],[2,1]]
+[[2,3],[5,1]] - [[4,5],[2,1]]
 = [[-2, -2], [3, 0]]
 </code>
 <p>and multiplied:</p>
 <code>
->>> [[2,3],[5,1]] * [[4,5],[2,1]]
+[[2,3],[5,1]] * [[4,5],[2,1]]
 = [[14, 13], [22, 26]]
->>> 7 * [[2,3],[5,1]]
+7 * [[2,3],[5,1]]
 = [[14, 21], [35, 7]]
->>> [[2,3],[5,1]] * identity 2
+[[2,3],[5,1]] * identity 2
 = [[2, 3], [5, 1]]
 </code>
 
-<p>You can calculate a matrix's determinant:</p>
+<p>We can calculate a matrix's determinant:</p>
 <code>
->>> det [[1,5,2],[2,3,1],[2,4,1]]
+det [[1,5,2],[2,3,1],[2,4,1]]
 = 3
 </code>
 <p>the inverse:</p>
 <code>
->>> inv [[1,5,2],[2,3,1],[2,4,1]]
+inv [[1,5,2],[2,3,1],[2,4,1]]
 = [[1/3, 1, 1/3], [0, -1, 1], [2/3, 2, 7/3]]
 </code>
 <p>the characteristic polynomial:</p>
 <code>
->>> poly [[1,5,2],[2,3,1],[2,4,1]]
+poly [[1,5,2],[2,3,1],[2,4,1]]
 = -x^3 + 5x^2 + 11x + 3
 </code>
 <p>and the eigenvalues:</p>
 <code>
->>> eigenvalues [[1,5,2],[2,3,1],[2,4,1]]
+eigenvalues [[1,5,2],[2,3,1],[2,4,1]]
 = 6.71, -1.38, -0.323
 </code>
 </page>
+
